2009-10-29  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (Attribute_to_gnu) <Attr_Object_Size>: Do not
	return the RM size for padded types.

2009-10-28  Robert Dewar  <dewar@adacore.com>

	* sem_type.adb: Minor reformatting

2009-10-28  Arnaud Charlet  <charlet@adacore.com>

	* exp_ch9.adb (Build_Task_Proc_Specification): Generate a different
	suffix for task type bodies.

2009-10-28  Ed Schonberg  <schonberg@adacore.com>

	* exp_aggr.adb (Convert_Aggr_In_Allocator): Do not look for a
	finalization list if the designated type requires no control actions,
	to prevent a useless semantic dependence on ada.tags.

2009-10-28  Bob Duff  <duff@adacore.com>

	* s-fileio.adb: Give more information in exception messages.

2009-10-28  Robert Dewar  <dewar@adacore.com>

	* gnat_ugn.texi: Document new -gnatyt requirement for space after right
	paren if next token starts with digit or letter.
	* styleg.adb (Check_Right_Paren): New rule for space after if next
	character is a letter or digit.

2009-10-28  Thomas Quinot  <quinot@adacore.com>

	* s-crtl.ads (System.CRTL.strerror): New function.

2009-10-28  Ed Schonberg  <schonberg@adacore.com>

	* sem_type.adb: Add guard to recover some type errors.

2009-10-28  Vincent Celier  <celier@adacore.com>

	* prj-nmsc.adb (Add_To_Or_Remove_From_List): New name of procedure
	Add_If_Not_In_List to account to the fact that a directory may be
	removed from the list. Only remove directory if Removed is True.

2009-10-28  Gary Dismukes  <dismukes@adacore.com>

	* a-textio.ads, a-textio.ads: Put back function EOF_Char in private
	part. Put back body of function EOF_Char.
	* a-tienau.adb: Remove with of Interfaces.C_Streams and change EOF back
	to EOF_Char.

2009-10-28  Emmanuel Briot  <briot@adacore.com>

	* prj-tree.adb (Free): Fix memory leak.

2009-10-28  Thomas Quinot  <quinot@adacore.com>

	* s-fileio.adb: Minor reformatting

2009-10-28  Arnaud Charlet  <charlet@adacore.com>
